# web-enviroplus

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml  start.sh
enviroweb/: webserver.py
enviroweb/smbus/: __init__.py
smbus/: __init__.py
